2008-03-26  Albert Chu  <chu11@llnl.gov>

	* update copyrights in a lot of places

2008-03-28  Patrick Winnertz <patrick.winnertz@credativ.de>

	* man/: Tons of manpage nroff fixes.

	* src/modules: debian compile fixes.
	
2008-03-26  Albert Chu  <chu11@llnl.gov>

	* META, NEWS: update for release

	* tagged cerebro-1-4-1

2008-01-29  Albert Chu  <chu11@llnl.gov>

	* src/cerebrod/cerebrod_speaker.c (_setup_metric_modules): Add
	debug statement.
	
2008-01-29  Albert Chu  <chu11@llnl.gov>

	* Various minor bug fixes based on code analyzer.

2008-01-25  Albert Chu  <chu11@llnl.gov>

	* man/cerebro.conf.5.in, src/cerebrod/cerebrod_config.c,
	src/cerebrod/cerebrod_speaker_data.c,
	src/libs/include/cerebro/cerebro_config.h,
	src/libs/include/cerebro/cerebro_constants.h,
	src/libs/util/config_util.c: Support metric module exclude
	options.
	
2008-01-04  Albert Chu  <chu11@llnl.gov>

	* src/cerebrod/cerebrod_speaker.c (_cerebrod_message_send): Fix
	memleak.
	
2007-11-20  Albert Chu  <chu11@llnl.gov>

	* src/cerebrod/cerebrod_speaker.c (cerebrod_send_message): Remove
	incorrect comment.

	* src/cerebrod/cerebrod_speaker.c (_speaker_initialize): Fix
	speaker initialization race.
	
2007-10-26  Albert Chu  <chu11@llnl.gov>

	* src/libs/cerebro/cerebro_event.c (_setup_event_connection): Fix
	default port bug.
	
2007-10-25  Albert Chu  <chu11@llnl.gov>

	* man/Makefile.am: Install cerebro.1 manpage in man1 instead of
	man3.

	* man/cerebro.conf.5.in: Add forgotten new fields.

	* man/cerebro_module_devel.3.in: Add forgotten module interface changes.

	* src/libs/cerebro/cerebro.c: Fix error message corner case.

	* src/libs/cerebro/cerebro_event.c (_event_value_unmarshall),
	src/libs/cerebro/cerebro_metric_data.c (_metric_value_unmarshall),
	src/libs/util/data_util.c (_unmarshall_data_value): Fix parsing
	corner cases.

2007-10-24  Albert Chu  <chu11@llnl.gov>

	* src/cerebro-stat/cerebro-stat.c (main): Fix minor output corner
	case.
	
2007-10-23  Albert Chu  <chu11@llnl.gov>
